--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.4",
+    "prettier": "^2.1.1",
     "sqlite3": "^5.0.0"
   }
 }
